init sparrow